# Elementa

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
docs/: index.md
docs/api/: cad.md  core.md  physics.md
docs/guides/: adding-geometry.md  adding-physics.md  architecture.md  examples.md  geometry.md  installation.md  interface.md  meshing.md  physics.md  postprocessing.md  project-files.md  quickstart.md  study.md
elementa/: __init__.py  __main__.py
elementa/cad/: __init__.py  cad.py
elementa/core/: __init__.py  cad_builder.py  evaluator.py  exceptions.py  geometry_registry.py  logger.py  material_library.py  project_state.py
elementa/physics/: __init__.py  base.py  electrostatics.py  heat_transfer.py  registry.py
elementa/ui/: expr.py  graphics_canvas.py  icon_manager.py  main_window.py  model_builder.py  new_project_wizard.py  plot_window.py  project_manager.py  property_panel.py  ribbon_toolbar.py  welcome_window.py
elementa/ui/panels/: __init__.py  mesh_panel.py  parameters_panel.py  physics_panel.py  study_panel.py
tests/: conftest.py  test_core.py  test_materials.py  test_physics.py
