[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elementa"
version = "1.0.0"
description = "Elementa: open-source finite element method (FEM) simulation workbench."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Soheil Hajibaba" }]
keywords = ["FEM", "finite-element", "simulation", "PDE", "gmsh", "scikit-fem", "PyQt6"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "PyQt6>=6.5",
  "gmsh>=4.11",
  "scikit-fem>=8.0",
]

[project.urls]
Homepage      = "https://github.com/soheilgreen/elementa"
Documentation = "https://soheilgreen.github.io/elementa/"
Repository    = "https://github.com/soheilgreen/elementa"
Issues        = "https://github.com/soheilgreen/elementa/issues"
Changelog     = "https://github.com/soheilgreen/elementa/blob/main/CHANGELOG.md"

[project.scripts]
elementa = "elementa.__main__:main"

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]
dev = [
  "ruff>=0.6",
  "pytest>=8.0",
  "pytest-qt>=4.4",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["elementa*"]

[tool.setuptools.package-data]
"elementa.assets" = ["*.png", "*.ico", "*.svg"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
